--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ main {
 }
 
 .post-image {
-    padding: 10px;
+    padding: 20px;
 }
 
 #bpimg55 {
@@ -77,6 +77,10 @@ aside {
     clear: both;
     grid-area: sidebar;
     margin-right: 80px;
+}
+
+#social, #archives {
+    margin-top: 50px;
 }
 
 #social-heading, #archives-heading {
@@ -108,4 +112,5 @@ footer {
 footer p {
     color: #FFFFFF;
     padding: 30px;
+    margin-left: 100px;
 }
